# c-plus-plus-belts

./: .gitignore  BusStorage.h  CMakeLists.txt  Common.h  Coordinate.cpp  Coordinate.h  CustomUtils.cpp  CustomUtils.h  Database.cpp  Database.h  Dockerfile  Json.cpp  Json.h  README.md  ReadResponse.cpp  ReadResponse.h  Request.cpp  Request.h  Settings.cpp  Settings.h  Solution.cpp  Solution.h  StopsStorage.cpp  StopsStorage.h  main.cpp  parse.h  search_server.cpp  search_server.h  tets.md
.devcontainer/: devcontainer.json
cmake/: clang-format.cmake
solutions/black/week1/transport_catalog_svg_integration/tests/: CMakeLists.txt
solutions/black/week1/transport_catalog_svg_integration/tests/samples/test1/: expected_output.json
solutions/black/week1/transport_catalog_svg_integration/tests/samples/test2/: input.json
solutions/black/week1/transport_catalog_svg_integration/tests/samples/test3/: input.json
solutions/black/week1/transport_catalog_svg_integration/tests/samples/test4/: input.json
solutions/black/week1/transport_catalog_under_sanitizers/src/: CMakeLists.txt  descriptions.cpp  descriptions.h  graph.h  json.cpp  json.h  main.cpp  requests.cpp  requests.h  router.h  sphere.cpp  sphere.h  transport_catalog.cpp  transport_catalog.h  transport_router.cpp  transport_router.h
solutions/black/week2/protobuf_phone_book/: CMakeLists.txt
solutions/black/week2/protobuf_phone_book/src/: iterator_range.h  phone_book.cpp  phone_book.h
solutions/black/week2/protobuf_phone_book/tests/: CMakeLists.txt  main.cpp
solutions/black/week3/transport_catalog_part_m/src/protos/: CMakeLists.txt
solutions/black/week3/transport_catalog_part_m/test/: CMakeLists.txt  integration_tests.cpp
solutions/black/week3/transport_catalog_part_m/test/samples/test1/: expected_output.json
solutions/black/week3/transport_catalog_part_m/test/samples/test2/: expected_output.json
solutions/black/week3/trasport_catalog_part_j/test/: CMakeLists.txt  main.cpp  tests.cpp
solutions/black/week5/6_transport_catalog_t/src/solution/: CMakeLists.txt  coords_compressor.cpp  coords_compressor.h  datetime.cpp  datetime.h  descriptions.cpp  map_renderer_helpers.cpp  requests.cpp  router.h  transport_catalog.h  transport_router.cpp  yellow_pages_catalog.cpp
solutions/brown/week6/part-b/: CMakeLists.txt  CustomUtils.cpp  CustomUtils.h  Database.cpp  Database.h  ReadResponse.cpp  ReadResponse.h  Request.cpp  Request.h  Solution.cpp  Solution.h  main.cpp
solutions/brown/week6/part-e/my/: BusStorage.cpp  BusStorage.h  CMakeLists.txt  Coordinate.cpp  CustomUtils.h  Database.cpp  Database.h  Graph.h  Json.cpp  Json.h  ReadResponse.cpp  ReadResponse.h  Request.cpp  Request.h  Router.h  Settings.cpp  Settings.h  Solution.cpp  Solution.h  StopsStorage.cpp  StopsStorage.h  main.cpp
solutions/brown/week6/part-e/my/test_data/: test_parsing.json
solutions/yandex-contest/: main1.cpp  main2.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
src/: CMakeLists.txt  cell.cpp  cell.h  common.cpp  contact.proto  descriptions.cpp  descriptions.h  formula.cpp  json.cpp  json.h  main.cpp  phone_book.cpp  phone_book.h  profile.h  requests.cpp  requests.h  router.h  sheet.cpp  sheet.h  specific_formula.cpp  specific_formula.h  statement.cpp  statement.h  svg.h  test_runner.h  transport_catalog.cpp  transport_catalog.h  transport_drawer.cpp  transport_drawer.h  transport_router.cpp  utils.h
src/grader/: CMakeLists.txt  test_runner.h
src/grammar/: SumMul.g4  SumMulBaseListener.cpp  SumMulBaseListener.h  SumMulLexer.cpp  SumMulLexer.h  SumMulLexer.tokens  SumMulListener.cpp  SumMulListener.h  SumMulParser.cpp  SumMulParser.h
src/grammar/.antlr/: SumMul.interp  SumMulLexer.interp
src/playground/: CMakeLists.txt
src/protos/: company.proto  descriptions.proto  map_renderer.proto  phone.proto  render_settings.proto  svg.proto  transport_catalog.proto  transport_router.proto
src/solution/: CMakeLists.txt  commands.cpp  comparators.cpp  comparators.h  datetime.cpp  descriptions.cpp  descriptions.h  filters.cpp  filters.h  graph.h  json.cpp  json.h  lexer.cpp  lexer.h  main.cpp  map_renderer.cpp  map_renderer.h  map_renderer_helpers.cpp  map_renderer_helpers.h  map_rendering_settings.cpp  map_rendering_settings.h  map_rendering_utils.cpp  map_rendering_utils.h  map_stops_distributor.cpp  map_stops_distributor.h  merge.cpp  mython.cpp  mython.h  object.cpp  object.h  object_holder.cpp  object_holder.h  processes.cpp  render_settings.cpp  render_settings.h  requests.cpp  requests.h  route_renderer.cpp  route_renderer.h  router.h  (+20 more)
src/testing/: defines.cpp
src/utils/: CMakeLists.txt  test_runner.h
test/: CMakeLists.txt  integration_tests.cpp  lexer_test.cpp  lexer_test.h  main.cpp  object_holder_test.cpp  object_holder_test.h  object_test.cpp  object_test.h  parse_test.cpp  parse_test.h  rendering_tests.cpp  statement_test.cpp  statement_test.h  test_svg.cpp  tests.cpp  tests.h
test/map_renderers/real/: real.cpp  real.h  real_sphere_projection.h
test/samples/grader10/: input.json
test/samples/simple_test1/: expected_output.json  make_base.json  process_requests.json
test/samples/simple_test2/: expected_output.json  process_requests.json
test/samples/test1/: expected_output.json  make_base.json  process_requests.json
test/samples/test1_companies/: expected_output.json  make_base.json  process_requests.json
test/samples/test2/: expected_output.json  input.json  make_base.json  process_requests.json
test/samples/test2_companies/: expected_output.json  make_base.json  process_requests.json
test/samples/test3/: make_base.json  process_requests.json
test/samples/test4/: expected_output.json  make_base.json  process_requests.json
test/utils/: test_runner.h
test_data/: test_integration_part_d_raw.json
test_data/test1/: expected_output.json
tests/: CMakeLists.txt  main.cpp  tests.cpp
tests/samples/test1/: input.json
tests/samples/test2/: expected_output.json  input.json
tests/utils/: test_runner.h
utils/: CMakeLists.txt  profile.h  test_runner.h
yandex-contest/: main.cpp
(+353 files in other folders)
